--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy" : "yarn build",
-    "deploy" : "gh-pages -d dist"
+    "add-domain": "mkdir build && echo dune.gimleux.de > build/CNAME",
+    "deploy": "npm run add-domain && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
