--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "waytothewater",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "homepage": "https://dune.gimleux.de/",
-  "scripts": {
-    "dev": "vite",
-    "host": "vite --host",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy" : "rm -rf dist/ && yarn build && yarn add-domain",
-    "add-domain": "echo dune.gimleux.de > dist/CNAME",
-    "deploy": "yarn predeploy && gh-pages -d dist"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
-  }
+	"name": "waytothewater",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"homepage": "https://dune.gimleux.de/",
+	"scripts": {
+		"dev": "vite",
+		"host": "vite --host",
+		"build": "tsc && vite build",
+		"biome": "biome format . --write && biome lint .",
+		"preview": "vite preview",
+		"predeploy": "rm -rf dist/ && yarn build && yarn add-domain",
+		"add-domain": "echo dune.gimleux.de > dist/CNAME",
+		"deploy": "yarn predeploy && gh-pages -d dist"
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-countdown": "^2.3.5",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.2.5",
+		"@types/react": "^18.0.37",
+		"@types/react-dom": "^18.0.11",
+		"@vitejs/plugin-react": "^4.0.0",
+		"typescript": "^5.0.2",
+		"vite": "^4.3.9"
+	}
 }
