chore: add gh-pages

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"preview": "vite preview",
 		"predeploy": "rm -rf dist/ && yarn build && yarn add-domain",
 		"add-domain": "echo dune.gimleux.de > dist/CNAME",
-		"deploy": "yarn predeploy && gh-pages -d dist"
+    "pages": "gh-pages -d dist",
+		"deploy": "yarn predeploy && yarn pages"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
@@ -24,6 +25,7 @@
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^4.0.0",
+		"gh-pages": "^6.3.0",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.9"
 	}
